--- a/bases/index.html
+++ b/bases/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <!-- <script src="./tipos/null-undefined.js"></script> -->
-    <script src="./appEjercicio1.js"></script>
+    <!-- <script src="./dist/funciones/function-type.js"></script> -->
+    <script src="./dist/appEjercicio2.js"></script>
+
 
   </body>
 </html>
