--- a/bases/index.html
+++ b/bases/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- <script src="./tipos/null-undefined.js"></script> -->
     <!-- <script src="./dist/funciones/function-type.js"></script> -->
-    <script src="./dist/appEjercicio2.js"></script>
+    <script src="./dist/objetos/union-type.js"></script>
 
 
   </body>
