--- a/bases/index.html
+++ b/bases/index.html
@@ -8,7 +8,9 @@
   <body>
     <!-- <script src="./tipos/null-undefined.js"></script> -->
     <!-- <script src="./dist/funciones/function-type.js"></script> -->
-    <script src="./dist/objetos/union-type.js"></script>
+    <!-- <script src="./ES6/classes-es6.js"></script> -->
+    <script src="./dist/main.js"></script>
+    
 
 
   </body>
